--- a/makefile.rpi
+++ b/makefile.rpi
@@ -34,6 +34,7 @@ CFLAGS = -fsigned-char $(DEVLIBS) \
 	-Isrc -Isrc/$(MAMEOS) -Isrc/zlib \
 	-I/usr/include/SDL \
 	-I$(SDKSTAGE)/opt/vc/include -I$(SDKSTAGE)/opt/vc/include/interface/vcos/pthreads \
+	-I$(SDKSTAGE)/opt/vc/include/interface/vmcs_host/linux \
 	-march=armv6 -mfpu=vfp -mfloat-abi=hard \
 	-O3 -ffast-math -fomit-frame-pointer -fstrict-aliasing \
 	-mstructure-size-boundary=32 -fexpensive-optimizations \
