Working 16bit and 8bit palette

--- a/mame.cfg
+++ b/mame.cfg
@@ -20,8 +20,14 @@ vector_width=640
 vector_height=480
 kioskmode=no
 force_stereo=no
-stretch_display=yes
-display_border=24
+# Fill the whole screen?
+display_stretch=no
+# Anti-alias the stretch?
+display_smooth_stretch=yes
+display_border=20
+# display_effect: 0 none, 1 scanlines, 2 phospher
+display_effect=0
+dirty=0
 
 [directory]
 inp=inp
