New GLES2 graphics backend

--- a/mame.cfg
+++ b/mame.cfg
@@ -20,14 +20,11 @@ vector_width=640
 vector_height=480
 kioskmode=no
 force_stereo=no
-# Fill the whole screen?
-display_stretch=no
 # Anti-alias the stretch?
 display_smooth_stretch=yes
-display_border=20
-# display_effect: 0 none, 1 scanlines, 2 phospher
+display_border=0
+# display effect postprocessing: 0 none, 1 scanlines
 display_effect=0
-dirty=0
 
 [directory]
 inp=inp
