--- a/mame.cfg
+++ b/mame.cfg
@@ -20,7 +20,7 @@ vector_width=640
 vector_height=480
 kioskmode=no
 force_stereo=no
-# Anti-alias the stretch?
+# Anti-alias the display?
 display_smooth_stretch=yes
 display_border=0
 # display effect postprocessing: 0 none, 1 scanlines
