tracking no needed

--- a/mame.cfg
+++ b/mame.cfg
@@ -38,3 +38,21 @@ artwork=artwork
 cheat=.
 rompath=roms
 samplepath=samples
+
+[frontend]
+#Keyboard controls for frontend only
+# Get codes from /usr/include/SDL/SDL_keysym.h
+K_START=13
+K_SELECT=53
+K_LEFT=276
+K_RIGHT=275
+K_UP=273
+K_DOWN=274
+K_A=306
+K_QUIT=27
+#Joystick controls for frontend only
+J_START=9
+J_SELECT=8
+J_A=0
+AXIS_LR=0
+AXIS_UD=1
